# Telegram-Assistant-Bot

./: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  plan.md  pyproject.toml
app/: config.py  logging.py  main.py  server.py  services.py
app/core/: agent.py  auth.py  compaction.py  concurrency.py  context.py  delivery.py  htmlfmt.py  memory.py  quota.py  ratelimit.py  richmsg.py  streaming.py  tools.py  workers.py
app/db/: dao.py  engine.py  models.py  schema.sql
app/handlers/: admin_actions.py  callbacks.py  commands.py  commands_registry.py  errors.py  group.py  guest.py  guest_commands.py  inline.py  lists.py  media.py  media_group.py  mentions.py  pipeline.py  private.py  replies.py
app/minimax/: chat.py  client.py  files.py  image.py  music.py  quota.py  tts.py  video.py  voice.py
app/search/: base.py  brave.py  duckduckgo.py  firecrawl.py  minimax.py  router.py
app/utils/: audio.py  clock.py  hexaudio.py  tg_files.py  tokens.py
docs/superpowers/plans/: 2026-06-14-direct-html-output.md  2026-06-14-status-line-replace-cursor-blink.md  2026-06-15-rich-message-generation-attachments.md
tests/: test_admin_actions.py  test_agent.py  test_audio_utils.py  test_auth_middleware.py  test_auth_quota.py  test_auto_clear.py  test_callbacks.py  test_concurrency.py  test_config.py  test_context.py  test_delivery.py  test_engine_isolation.py  test_generation.py  test_guest.py  test_htmlfmt.py  test_inline.py  test_media.py  test_media_group.py  test_mentions.py  test_minimax_client.py  test_mmx_quota.py  test_pagination.py  test_pipeline_quota.py  test_replies.py  test_richmsg.py  test_search_router.py  test_server.py  test_streaming.py  test_tool_schemas.py  test_workers.py
(+4 files in other folders)
