[project]
name = "telegram-assistant-bot"
version = "0.1.0"
description = "助理型 Telegram Bot:MiniMax M3 多模态 + 语音/图片/视频/音乐生成 + 联网搜索 + 持久记忆 + 配额控制"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.15",
    "aiohttp>=3.9",
    "httpx>=0.27",
    "ddgs>=6.0",
    "aiosqlite>=0.20",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "tenacity>=9.0",
    "tzdata",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
packages = { find = { include = ["app*"] } }
