[project]
name = "telegram-assistant-bot"
version = "0.1.0"
description = "助理型 Telegram Bot:MiniMax M3 多模态 + 语音/图片/视频/音乐生成 + 联网搜索 + 持久记忆 + 配额控制"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.15",
    "aiohttp>=3.9",
    "httpx>=0.27",
    "ddgs>=6.0",
    "aiosqlite>=0.20",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "tenacity>=9.0",
    "tzdata",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data", ".venv"]

[tool.ruff.lint]
# 基础规则集:pyflakes/pycodestyle/导入排序/现代化语法
select = ["F", "E", "W", "I", "UP"]
ignore = [
    "E501",  # 行长由 formatter 管,lint 不强制
]

[tool.ruff.lint.per-file-ignores]
# 测试允许未用 import(fixture 注入)与 *
"tests/**/*.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
packages = { find = { include = ["app*"] } }
